[package]
name = "win32_notification"
version = "0.1.0"
authors = ["AmaranthineCodices <git@amaranthinecodices.me>"]
edition = "2018"
categories = [ "os", "os::windows-apis" ]
description = "Allows easy creation and manipulation of Win32 notifications."
keywords = [ "win32", "windows", "notification" ]
license = "MIT"
repository = "https://github.com/AmaranthineCodices/win32_notification"
readme = "README.md"

[dependencies]
winapi = { version = "0.3", features = [ "shellapi", "combaseapi", "errhandlingapi", "impl-default", "winerror", "impl-debug" ] }